PUG-250: Updates module academic domains courses and areasofexpertise;